--- a/OffshoreTrack/wwwroot/css/site.css
+++ b/OffshoreTrack/wwwroot/css/site.css
@@ -26,39 +26,33 @@ body {
   display: none;
 }
 
+
+
 /* Estilo para a versão de impressão */
 @media print {
+
   .print-hide {
     display: none !important;
   }
-
-  .print-only-oc {
-    display: block !important;
+  /* Esconde todos os elementos no momento da impressão */
+  body * {
+      visibility: hidden;
   }
 
-  html {
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    max-height: 100%;
-    font-size: 10px;
-    margin: 0;
-    padding: 0;
-  }
-  .card-body {
-    padding: 0 0px 0px 0px;
+  /* Mostra somente elementos com a classe 'print-oc' no momento da impressão */
+  .print_oc, .print_oc * {
+      visibility: visible !important;
   }
 
-  .card {
-    margin-bottom: 0px;
-    border: none;
-    border-radius: 0px;
+  /* Mostra somente elementos com a classe 'print-rel' no momento da impressão */
+  .print_rel, .print_rel * {
+      visibility: visible !important;
   }
-  * {
-    margin: 0;
-    padding: 0;
-}
 
-
-
+  /* Opção para ajustar o layout dos elementos que serão impressos */
+  .print_oc, .print_rel {
+      position: absolute !important;
+      left: 0;
+      top: 0;
+  }
 }
